# DoanEdit

./: .gitmodules  CMakeLists.txt  CMakePresets.json
.zed/: debug.json
src/: main.c
